changes for chat and rating and property
