# storage/api-docs/api-docs.json
@@ -935,7 +935,7 @@
                 "tags": [
                     "chats"
                 ],
-                "summary": "",
+                "summary": "Load chat messages with read status update",
                 "operationId": "loadChat",
                 "parameters": [
                     {
@@ -956,7 +956,11 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "Details fetched"
+                                            "example": "Chats loaded successfully"
+                                        },
+                                        "list": {
+                                            "type": "array",
+                                            "items": {}
                                         }
                                     },
                                     "type": "object"
@@ -964,15 +968,15 @@
                             }
                         }
                     },
-                    "401": {
-                        "description": "Unauthenticated",
+                    "422": {
+                        "description": "Validation Error",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "Authentication error"
+                                            "example": "Validation error"
                                         }
                                     },
                                     "type": "object"
@@ -980,7 +984,7 @@
                             }
                         }
                     },
-                    "404": {
+                    "400": {
                         "description": "Not Found",
                         "content": {
                             "application/json": {
@@ -988,23 +992,7 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "Not found error"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Something went wrong"
+                                            "example": "No chats found"
                                         }
                                     },
                                     "type": "object"
@@ -1229,13 +1217,103 @@
                         }
                     },
                     {
-                        "name": "page",
+                        "name": "min_price",
                         "in": "query",
-                        "description": "Page number for pagination (default is 1)",
+                        "description": "Minimum price of property",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 100
+                        }
+                    },
+                    {
+                        "name": "max_price",
+                        "in": "query",
+                        "description": "Maximum price of property",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 500
+                        }
+                    },
+                    {
+                        "name": "property_type",
+                        "in": "query",
+                        "description": "Property type",
                         "required": false,
                         "schema": {
                             "type": "integer",
                             "example": 1
+                        }
+                    },
+                    {
+                        "name": "no_of_rooms",
+                        "in": "query",
+                        "description": "Number of Rooms",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 3
+                        }
+                    },
+                    {
+                        "name": "bathroom",
+                        "in": "query",
+                        "description": "Number of bathrooms",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 2
+                        }
+                    },
+                    {
+                        "name": "beds",
+                        "in": "query",
+                        "description": "Number of beds",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 4
+                        }
+                    },
+                    {
+                        "name": "adults",
+                        "in": "query",
+                        "description": "Number of adults",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 2
+                        }
+                    },
+                    {
+                        "name": "children",
+                        "in": "query",
+                        "description": "Number of children",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "infants",
+                        "in": "query",
+                        "description": "Number of infants",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "property_amenity",
+                        "in": "query",
+                        "description": "Property amenities (comma-separated values)",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "1,2"
                         }
                     }
                 ],
@@ -1253,6 +1331,62 @@
                                         "name": {
                                             "type": "string",
                                             "example": "Property One"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Something went wrong"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/property/listByRating": {
+            "get": {
+                "tags": [
+                    "property"
+                ],
+                "operationId": "listByRating",
+                "responses": {
+                    "200": {
+                        "description": "Property List by Rating",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "Property One"
+                                        },
+                                        "rating": {
+                                            "type": "number",
+                                            "format": "float",
+                                            "example": 4.5
                                         }
                                     },
                                     "type": "object"
@@ -2121,6 +2255,98 @@
                     }
                 ]
             }
+        },
+        "/rating/storeRating": {
+            "post": {
+                "tags": [
+                    "rating"
+                ],
+                "summary": "Store a new rating.",
+                "operationId": "storeRating",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "required": [
+                                    "property_id",
+                                    "rating"
+                                ],
+                                "properties": {
+                                    "property_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "rating": {
+                                        "type": "integer",
+                                        "example": 4
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Great Property!"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Rating stored successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Rating saved successfully."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Validation error."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Something went wrong."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -2149,6 +2375,10 @@
         {
             "name": "property",
             "description": "property"
+        },
+        {
+            "name": "rating",
+            "description": "rating"
         }
     ],
     "security": [
